--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -4,9 +4,10 @@ quarkus:
     username: ${POSTGRES_USER:admin}
     password: ${POSTGRES_PASSWORD:admin}
     jdbc:
-      url: jdbc:postgresql://${POSTGRES_HOST:localhost}:${POSTGRES_PORT:5432}/mydatabase
+      url: jdbc:postgresql://${POSTGRES_HOST:localhost}:${POSTGRES_PORT:5432}/${POSTGRES_DB_NAME:vehicles-service-db}
   hibernate-orm:
     database:
       generation: validate
   liquibase:
     migrate-at-start: true
+    change-log: db/changelog.xml
