Successfully build native executable.

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 #Gradle properties
-#Mon Jul 20 12:17:36 GMT 2020
+#Tue Jul 21 21:25:57 CEST 2020
 quarkusPluginVersion=1.6.0.Final
 quarkusPlatformArtifactId=quarkus-universe-bom
 quarkusPlatformGroupId=io.quarkus
